[tool.poetry]
name = "contract-nli-bert"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
readme = "README.md"
packages = [{include = "contract_nli_bert"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
torch = "1.7.1"
tqdm = "^4.66.1"
sentencepiece = "^0.1.99"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.2"
transformers = "^4.36.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
