[tool.poetry]
name = "contract-nli-bert"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
readme = "README.md"
packages = [{include = "contract_nli"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "<1.20.0"
torch = "^1.8.0"
tqdm = "^4.66.1"
sentencepiece = "^0.1.99"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.2"
transformers = ">=4.5.1,<5.0.0"
click = "^8.1.7"
torchutils = "^0.0.4"
tensorboard = "2.4.1"
protobuf = "< 3.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
